add AnnotationPackageSupport api from idea for extending notnull annotations - for lombok merge