@@ -1,9 +1,14 @@
 // Copyright 2000-2018 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
 package com.intellij.java.impl.codeInsight;
 
+import com.intellij.java.analysis.impl.codeInsight.daemon.impl.analysis.JavaModuleGraphUtil;
 import com.intellij.java.analysis.impl.codeInspection.dataFlow.HardcodedContracts;
 import com.intellij.java.indexing.impl.stubs.index.JavaAnnotationIndex;
-import com.intellij.java.language.codeInsight.*;
+import com.intellij.java.language.annoPackages.AnnotationPackageSupport;
+import com.intellij.java.language.codeInsight.Nullability;
+import com.intellij.java.language.codeInsight.NullabilityAnnotationInfo;
+import com.intellij.java.language.codeInsight.NullableNotNullManager;
+import com.intellij.java.language.impl.JavaFileType;
 import com.intellij.java.language.impl.codeInsight.MetaAnnotationUtil;
 import com.intellij.java.language.psi.*;
 import consulo.annotation.component.ServiceImpl;
@@ -14,10 +19,12 @@ import consulo.component.persist.State;
 import consulo.component.persist.Storage;
 import consulo.component.util.ModificationTracker;
 import consulo.component.util.SimpleModificationTracker;
+import consulo.java.language.impl.annoPackages.Jsr305Support;
 import consulo.language.psi.PsiElement;
 import consulo.language.psi.PsiModificationTracker;
 import consulo.language.psi.PsiPackage;
 import consulo.language.psi.PsiUtilCore;
+import consulo.language.psi.scope.DelegatingGlobalSearchScope;
 import consulo.language.psi.scope.GlobalSearchScope;
 import consulo.module.content.ProjectFileIndex;
 import consulo.module.content.ProjectRootManager;
@@ -29,12 +36,13 @@ import consulo.util.xml.serializer.InvalidDataException;
 import consulo.util.xml.serializer.JDOMExternalizableStringList;
 import consulo.util.xml.serializer.WriteExternalException;
 import consulo.virtualFileSystem.VirtualFile;
+import consulo.virtualFileSystem.fileType.FileTypeRegistry;
+import jakarta.annotation.Nonnull;
+import jakarta.annotation.Nullable;
 import jakarta.inject.Inject;
 import jakarta.inject.Singleton;
 import org.jdom.Element;
 
-import jakarta.annotation.Nonnull;
-import jakarta.annotation.Nullable;
 import java.util.*;
 
 import static com.intellij.java.language.codeInsight.AnnotationUtil.NOT_NULL;
@@ -43,19 +51,39 @@ import static com.intellij.java.language.codeInsight.AnnotationUtil.NOT_NULL;
 @State(name = "NullableNotNullManager", storages = @Storage("misc.xml"))
 @ServiceImpl
 public class NullableNotNullManagerImpl extends NullableNotNullManager implements PersistentStateComponent<Element>, ModificationTracker {
-  public static final String TYPE_QUALIFIER_NICKNAME = "javax.annotation.meta.TypeQualifierNickname";
   private static final String INSTRUMENTED_NOT_NULLS_TAG = "instrumentedNotNulls";
 
   public String myDefaultNullable = JAKARTA_ANNOTATION_NULLABLE;
   public String myDefaultNotNull = JAKARTA_ANNOTATION_NONNULL;
-  public final JDOMExternalizableStringList myNullables = new JDOMExternalizableStringList(Arrays.asList(DEFAULT_NULLABLES));
-  public final JDOMExternalizableStringList myNotNulls = new JDOMExternalizableStringList(Arrays.asList(DEFAULT_NOT_NULLS));
-  private List<String> myInstrumentedNotNulls = ContainerUtil.newArrayList(JAKARTA_ANNOTATION_NONNULL);
+  public final JDOMExternalizableStringList myNullables = new JDOMExternalizableStringList();
+  public final JDOMExternalizableStringList myNotNulls = new JDOMExternalizableStringList();
+  private List<String> myInstrumentedNotNulls = List.of(NOT_NULL);
   private final SimpleModificationTracker myTracker = new SimpleModificationTracker();
+
+  private final Project myProject;
 
   @Inject
   public NullableNotNullManagerImpl(Project project) {
-    super(project);
+    myProject = project;
+
+    AnnotationPackageSupportCache cache = AnnotationPackageSupportCache.get(project.getApplication());
+
+    myNullables.addAll(cache.myDefaultNullables.keySet());
+    myNotNulls.addAll(cache.myDefaultNotNulls.keySet());
+  }
+
+  @Override
+  @Nonnull
+  public List<String> getDefaultNullables() {
+    AnnotationPackageSupportCache cache = AnnotationPackageSupportCache.get(myProject.getApplication());
+    return new ArrayList<>(cache.myDefaultNullables.keySet());
+  }
+
+  @Override
+  @Nonnull
+  public List<String> getDefaultNotNulls() {
+    AnnotationPackageSupportCache cache = AnnotationPackageSupportCache.get(myProject.getApplication());
+    return new ArrayList<>(cache.myDefaultNotNulls.keySet());
   }
 
   @Override
@@ -89,6 +117,49 @@ public class NullableNotNullManagerImpl extends NullableNotNullManager implement
   @Nonnull
   public String getDefaultNotNull() {
     return myDefaultNotNull;
+  }
+
+  @Override
+  public boolean isTypeUseAnnotationLocationRestricted(String name) {
+    AnnotationPackageSupport support = findAnnotationSupport(name);
+    return support != null && support.isTypeUseAnnotationLocationRestricted();
+  }
+
+  @Override
+  public boolean canAnnotateLocals(String name) {
+    AnnotationPackageSupport support = findAnnotationSupport(name);
+    return support == null || support.canAnnotateLocals();
+  }
+
+  @Nullable
+  private AnnotationPackageSupport findAnnotationSupport(String name) {
+    AnnotationPackageSupportCache cache = AnnotationPackageSupportCache.get(myProject.getApplication());
+
+    AnnotationPackageSupport support = cache.myDefaultUnknowns.get(name);
+    if (support == null) {
+      support = cache.myDefaultNotNulls.get(name);
+      if (support == null) {
+        support = cache.myDefaultNullables.get(name);
+      }
+    }
+    return support;
+  }
+
+  @Override
+  @Nonnull
+  public Optional<Nullability> getAnnotationNullability(String name) {
+    if (myNotNulls.contains(name)) {
+      return Optional.of(Nullability.NOT_NULL);
+    }
+    if (myNullables.contains(name)) {
+      return Optional.of(Nullability.NULLABLE);
+    }
+
+    AnnotationPackageSupportCache cache = AnnotationPackageSupportCache.get(myProject.getApplication());
+    if (cache.myDefaultUnknowns.containsKey(name)) {
+      return Optional.of(Nullability.UNKNOWN);
+    }
+    return Optional.empty();
   }
 
   @Override
@@ -127,7 +198,6 @@ public class NullableNotNullManagerImpl extends NullableNotNullManager implement
     return HardcodedContracts.hasHardcodedContracts(element);
   }
 
-
   @Override
   public Element getState() {
     Element component = new Element("component");
@@ -153,11 +223,22 @@ public class NullableNotNullManagerImpl extends NullableNotNullManager implement
     return component;
   }
 
+  @Override
+  protected @Nullable NullabilityAnnotationInfo findNullityDefaultOnModule(PsiAnnotation.TargetType[] targetTypes,
+                                                                           @Nonnull PsiElement element) {
+    PsiJavaModule module = JavaModuleGraphUtil.findDescriptorByElement(element);
+    if (module != null) {
+      return getNullityDefault(module, targetTypes, element, false);
+    }
+    return null;
+  }
+
   private boolean hasDefaultValues() {
+    AnnotationPackageSupportCache cache = AnnotationPackageSupportCache.get(myProject.getApplication());
     return JAKARTA_ANNOTATION_NONNULL.equals(myDefaultNotNull) &&
       JAKARTA_ANNOTATION_NULLABLE.equals(myDefaultNullable) &&
-      new HashSet<>(myNullables).equals(Set.of(DEFAULT_NULLABLES)) &&
-      new HashSet<>(myNotNulls).equals(Set.of(DEFAULT_NOT_NULLS));
+      new HashSet<>(myNullables).equals(cache.myDefaultNullables.keySet()) &&
+      new HashSet<>(myNotNulls).equals(cache.myDefaultNotNulls.keySet());
   }
 
   @Override
@@ -180,79 +261,50 @@ public class NullableNotNullManagerImpl extends NullableNotNullManager implement
   }
 
   private void normalizeDefaults() {
-    myNotNulls.removeAll(Set.of(DEFAULT_NULLABLES));
-    myNullables.removeAll(Set.of(DEFAULT_NOT_NULLS));
-    myNullables.addAll(ContainerUtil.filter(DEFAULT_NULLABLES, s -> !myNullables.contains(s)));
-    myNotNulls.addAll(ContainerUtil.filter(DEFAULT_NOT_NULLS, s -> !myNotNulls.contains(s)));
+    AnnotationPackageSupportCache cache = AnnotationPackageSupportCache.get(myProject.getApplication());
+
+    myNotNulls.removeAll(cache.myDefaultNullables.keySet());
+    myNullables.removeAll(cache.myDefaultNotNulls.keySet());
+    myNullables.addAll(ContainerUtil.filter(cache.myDefaultNullables.keySet(), s -> !myNullables.contains(s)));
+    myNotNulls.addAll(ContainerUtil.filter(cache.myDefaultNotNulls.keySet(), s -> !myNotNulls.contains(s)));
     myTracker.incModificationCount();
   }
 
   @Nonnull
   private List<PsiClass> getAllNullabilityNickNames() {
-    if (!getNotNulls().contains(JAKARTA_ANNOTATION_NONNULL)) {
+    if (!getNotNulls().contains(Jsr305Support.JAVAX_ANNOTATION_NONNULL)) {
       return Collections.emptyList();
     }
     return CachedValuesManager.getManager(myProject).getCachedValue(myProject, () -> {
-      List<PsiClass> result = new ArrayList<>();
-      GlobalSearchScope scope = GlobalSearchScope.allScope(myProject);
-      PsiClass[] nickDeclarations = JavaPsiFacade.getInstance(myProject).findClasses(TYPE_QUALIFIER_NICKNAME, scope);
+      Set<PsiClass> result = new HashSet<>(getPossiblyUnresolvedJavaNicknameUsages());
+      GlobalSearchScope scope = new DelegatingGlobalSearchScope(GlobalSearchScope.allScope(myProject)) {
+        @Override
+        public boolean contains(@Nonnull VirtualFile file) {
+          return super.contains(file) && !FileTypeRegistry.getInstance().isFileOfType(file, JavaFileType.INSTANCE);
+        }
+      };
+      PsiClass[] nickDeclarations = JavaPsiFacade.getInstance(myProject).findClasses(Jsr305Support.TYPE_QUALIFIER_NICKNAME, scope);
       for (PsiClass tqNick : nickDeclarations) {
-        result.addAll(ContainerUtil.findAll(MetaAnnotationUtil.getChildren(tqNick, scope),
-                                            NullableNotNullManagerImpl::isNullabilityNickName));
+        result.addAll(ContainerUtil.findAll(MetaAnnotationUtil.getChildren(tqNick, scope), Jsr305Support::isNullabilityNickName));
       }
-      if (nickDeclarations.length == 0) {
-        result.addAll(getUnresolvedNicknameUsages());
-      }
-      return CachedValueProvider.Result.create(result, PsiModificationTracker.MODIFICATION_COUNT);
+      return CachedValueProvider.Result.create(new ArrayList<>(result), PsiModificationTracker.MODIFICATION_COUNT);
     });
   }
 
   // some frameworks use jsr305 annotations but don't have them in classpath
   @Nonnull
-  private List<PsiClass> getUnresolvedNicknameUsages() {
+  private List<PsiClass> getPossiblyUnresolvedJavaNicknameUsages() {
     List<PsiClass> result = new ArrayList<>();
-    Collection<PsiAnnotation> annotations = JavaAnnotationIndex.getInstance()
-                                                               .get(StringUtil.getShortName(TYPE_QUALIFIER_NICKNAME),
-                                                                    myProject,
-                                                                    GlobalSearchScope.allScope(myProject));
+    Collection<PsiAnnotation> annotations = JavaAnnotationIndex.getInstance().getAnnotations(StringUtil.getShortName(
+      Jsr305Support.TYPE_QUALIFIER_NICKNAME), myProject, GlobalSearchScope.allScope(myProject));
     for (PsiAnnotation annotation : annotations) {
       PsiElement context = annotation.getContext();
-      if (context instanceof PsiModifierList && context.getContext() instanceof PsiClass) {
-        PsiClass ownerClass = (PsiClass)context.getContext();
-        if (ownerClass.isAnnotationType() && isNullabilityNickName(ownerClass)) {
-          result.add(ownerClass);
-        }
+      if (context instanceof PsiModifierList && context.getContext() instanceof PsiClass ownerClass &&
+        ownerClass.isAnnotationType() && Jsr305Support.isNullabilityNickName(ownerClass)) {
+        result.add(ownerClass);
       }
     }
     return result;
-  }
-
-  @Nullable
-  protected NullabilityAnnotationInfo isJsr305Default(@Nonnull PsiAnnotation annotation,
-                                                      @Nonnull PsiAnnotation.TargetType[] placeTargetTypes) {
-    PsiClass declaration = resolveAnnotationType(annotation);
-    PsiModifierList modList = declaration == null ? null : declaration.getModifierList();
-    if (modList == null) {
-      return null;
-    }
-
-    PsiAnnotation tqDefault = AnnotationUtil.findAnnotation(declaration, true, "javax.annotation.meta.TypeQualifierDefault");
-    if (tqDefault == null) {
-      return null;
-    }
-
-    Set<PsiAnnotation.TargetType> required = AnnotationTargetUtil.extractRequiredAnnotationTargets(tqDefault.findAttributeValue(null));
-    if (required == null || (!required.isEmpty() && !ContainerUtil.intersects(required, Arrays.asList(placeTargetTypes)))) {
-      return null;
-    }
-
-    for (PsiAnnotation qualifier : modList.getAnnotations()) {
-      Nullability nullability = getJsr305QualifierNullability(qualifier);
-      if (nullability != null) {
-        return new NullabilityAnnotationInfo(annotation, nullability, true);
-      }
-    }
-    return null;
   }
 
   @Override
@@ -261,9 +313,7 @@ public class NullableNotNullManagerImpl extends NullableNotNullManager implement
                                                         @Nonnull PsiAnnotation.TargetType[] placeTargetTypes,
                                                         PsiElement context, boolean superPackage) {
     PsiModifierList modifierList = container.getModifierList();
-    if (modifierList == null) {
-      return null;
-    }
+    if (modifierList == null) return null;
     for (PsiAnnotation annotation : modifierList.getAnnotations()) {
       if (container instanceof PsiPackage) {
         VirtualFile annotationFile = PsiUtilCore.getVirtualFile(annotation);
@@ -277,7 +327,7 @@ public class NullableNotNullManagerImpl extends NullableNotNullManager implement
           }
         }
       }
-      NullabilityAnnotationInfo result = checkNullityDefault(annotation, placeTargetTypes, superPackage);
+      NullabilityAnnotationInfo result = checkNullityDefault(annotation, context, placeTargetTypes, superPackage);
       if (result != null) {
         return result;
       }
@@ -287,80 +337,33 @@ public class NullableNotNullManagerImpl extends NullableNotNullManager implement
 
   @Nullable
   private NullabilityAnnotationInfo checkNullityDefault(@Nonnull PsiAnnotation annotation,
+                                                        @Nonnull PsiElement context,
                                                         @Nonnull PsiAnnotation.TargetType[] placeTargetTypes,
                                                         boolean superPackage) {
-    NullabilityAnnotationInfo jsr = superPackage ? null : isJsr305Default(annotation, placeTargetTypes);
-    return jsr != null ? jsr : CheckerFrameworkNullityUtil.isCheckerDefault(annotation, placeTargetTypes);
-  }
-
-  @Nullable
-  private static PsiClass resolveAnnotationType(@Nonnull PsiAnnotation annotation) {
-    PsiJavaCodeReferenceElement element = annotation.getNameReferenceElement();
-    PsiElement declaration = element == null ? null : element.resolve();
-    if (!(declaration instanceof PsiClass) || !((PsiClass)declaration).isAnnotationType()) {
-      return null;
-    }
-    return (PsiClass)declaration;
-  }
-
-  @Nullable
-  private Nullability getJsr305QualifierNullability(@Nonnull PsiAnnotation qualifier) {
-    String qName = qualifier.getQualifiedName();
-    if (qName == null || !qName.startsWith("javax.annotation.")) {
-      return null;
-    }
-
-    if (qName.equals(JAKARTA_ANNOTATION_NULLABLE) && getNullables().contains(qName)) {
-      return Nullability.NULLABLE;
-    }
-    if (qName.equals(JAKARTA_ANNOTATION_NONNULL)) {
-      return extractNullityFromWhenValue(qualifier);
+    for (AnnotationPackageSupport support : myProject.getApplication().getExtensionList(AnnotationPackageSupport.class)) {
+      NullabilityAnnotationInfo info = support.getNullabilityByContainerAnnotation(annotation, context, placeTargetTypes, superPackage);
+      if (info != null) {
+        return info;
+      }
     }
     return null;
-  }
-
-  private static boolean isNullabilityNickName(@Nonnull PsiClass candidate) {
-    String qname = candidate.getQualifiedName();
-    if (qname == null || qname.startsWith("javax.annotation.")) {
-      return false;
-    }
-    return getNickNamedNullability(candidate) != Nullability.UNKNOWN;
-  }
-
-  @Nonnull
-  private static Nullability getNickNamedNullability(@Nonnull PsiClass psiClass) {
-    if (AnnotationUtil.findAnnotation(psiClass, TYPE_QUALIFIER_NICKNAME) == null) {
-      return Nullability.UNKNOWN;
-    }
-
-    PsiAnnotation nonNull = AnnotationUtil.findAnnotation(psiClass, JAKARTA_ANNOTATION_NONNULL);
-    return nonNull != null ? extractNullityFromWhenValue(nonNull) : Nullability.UNKNOWN;
-  }
-
-  @Nonnull
-  private static Nullability extractNullityFromWhenValue(@Nonnull PsiAnnotation nonNull) {
-    PsiAnnotationMemberValue when = nonNull.findAttributeValue("when");
-    if (when instanceof PsiReferenceExpression) {
-      String refName = ((PsiReferenceExpression)when).getReferenceName();
-      if ("ALWAYS".equals(refName)) {
-        return Nullability.NOT_NULL;
-      }
-      if ("MAYBE".equals(refName) || "NEVER".equals(refName)) {
-        return Nullability.NULLABLE;
-      }
-    }
-
-    // 'when' is unknown and annotation is known -> default value (for javax.annotation.Nonnull is ALWAYS)
-    if (when == null && JAKARTA_ANNOTATION_NONNULL.equals(nonNull.getQualifiedName())) {
-      return Nullability.NOT_NULL;
-    }
-    return Nullability.UNKNOWN;
   }
 
   @Nonnull
   private List<String> filterNickNames(@Nonnull Nullability nullability) {
     return ContainerUtil.mapNotNull(getAllNullabilityNickNames(),
-                                    c -> getNickNamedNullability(c) == nullability ? c.getQualifiedName() : null);
+                                    c -> Jsr305Support.getNickNamedNullability(c) == nullability ? c.getQualifiedName() : null);
+  }
+
+  @Override
+  protected @Nonnull Nullability correctNullability(@Nonnull Nullability nullability, @Nonnull PsiAnnotation annotation) {
+    if (nullability == Nullability.NOT_NULL && annotation.hasQualifiedName(Jsr305Support.JAVAX_ANNOTATION_NONNULL)) {
+      Nullability correctedNullability = Jsr305Support.extractNullityFromWhenValue(annotation);
+      if (correctedNullability != null) {
+        return correctedNullability;
+      }
+    }
+    return nullability;
   }
 
   @Nonnull
@@ -381,13 +384,41 @@ public class NullableNotNullManagerImpl extends NullableNotNullManager implement
 
   @Nonnull
   @Override
-  protected Set<String> getAllNullabilityAnnotationsWithNickNames() {
+  protected NullabilityAnnotationDataHolder getAllNullabilityAnnotationsWithNickNames() {
+    AnnotationPackageSupportCache cache = AnnotationPackageSupportCache.get(myProject.getApplication());
+
     return CachedValuesManager.getManager(myProject).getCachedValue(myProject, () -> {
-      Set<String> result = new HashSet<>();
-      result.addAll(getNotNulls());
-      result.addAll(getNullables());
-      result.addAll(ContainerUtil.mapNotNull(getAllNullabilityNickNames(), PsiClass::getQualifiedName));
-      return CachedValueProvider.Result.create(Collections.unmodifiableSet(result), PsiModificationTracker.MODIFICATION_COUNT);
+      Map<String, Nullability> result = new HashMap<>();
+      for (String qName : cache.myDefaultAll) {
+        result.put(qName, null);
+      }
+      for (String qName : getNotNulls()) {
+        result.put(qName, Nullability.NOT_NULL);
+      }
+      for (String qName : getNullables()) {
+        result.put(qName, Nullability.NULLABLE);
+      }
+      for (String qName : cache.myDefaultUnknowns.keySet()) {
+        result.put(qName, Nullability.UNKNOWN);
+      }
+      for (PsiClass aClass : getAllNullabilityNickNames()) {
+        String qName = aClass.getQualifiedName();
+        if (qName != null) {
+          result.putIfAbsent(qName, Jsr305Support.getNickNamedNullability(aClass));
+        }
+      }
+      NullabilityAnnotationDataHolder holder = new NullabilityAnnotationDataHolder() {
+        @Override
+        public Set<String> qualifiedNames() {
+          return result.keySet();
+        }
+
+        @Override
+        public @Nullable Nullability getNullability(String annotation) {
+          return result.get(annotation);
+        }
+      };
+      return CachedValueProvider.Result.create(holder, PsiModificationTracker.MODIFICATION_COUNT);
     });
   }
 
